--- a/style/style.css
+++ b/style/style.css
@@ -1,35 +1,42 @@
-*{
 
-   box-sizing: border-box;
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
+
 html{
-  scroll-behavior: smooth;
+  font-size: 16px; /* Sets the base font size */
+  line-height: 1.5; /* Sets a comfortable line height */
+  -webkit-text-size-adjust: 100%; /* Prevents font resizing in some browsers */
+  scroll-behavior: smooth; /* Enables smooth scrolling */
   scroll-padding-top: var(--scroll-padding-top, 50px);
 }
 body {
-  font-family: Arial, sans-serif;
-  margin: 70px 0 0 0;
-  padding: 0;
-  color: #333;
-  background-color: #f9f7f7;
+  font-family: 'Poppins', sans-serif; /* Sets the default font family */
+    color: #333; /* Sets a standard text color */
+    line-height: 1.6; /* Sets a comfortable line height */
+    overflow-x: hidden; /* Prevents horizontal scrolling */
+    color: #333;
+    background-color: #f9f7f7;
 } 
+section{
 
+  padding: 20px 20px;
 
-
-.container1 h2 {
-  text-align: center;
-  font-size: 2em;
-  font-weight: bold;
-  /* margin: 0px; */
-  color: #154161; /* Darker shade for better readability */
 }
 
+section h2 {
+  text-align: center;
+  font-weight: bold;
+  color: #154161; 
+}
 
 /* ================================NAVIGATION ======================== */
 .nav {
+  padding: 20px;
   height: 70px;
-  top: 0;
-  padding:  0 1em ;
   background: #ffffff;
   position: fixed;
   width: 100%;
@@ -40,19 +47,14 @@ body {
   box-shadow: 0 2px 3px #3188ebfe;
 }
 
-
-
-.nav .logo img {
-  width: 150px;
-  height: 100%;
+.nav .logo  img{
+  width: 120px;
 }
 
 .nav ul {
   list-style: none;
   display: flex;
   align-items: center;
-  padding: 0;
-  margin: 0;
   position: absolute;
   left: 50%;
   transform: translateX(-50%);
@@ -70,16 +72,14 @@ body {
   color: #fff;
   cursor: pointer;
   border-radius: 5px;
-  font-size: 1rem;
-  /* transition: background-color 0.3s; */
 }
 
-.nav .lang button:hover, .nav .mobile-lang button:hover {
-  background: #3188eb;
+.nav  button:hover{
+  background: #41b18d;
 }
 
 .nav ul li a {
-  color: #3D3E3B;
+  color: #3D3E3B; 
   text-decoration: none;
   font-size: 1.1rem;
   transition: color 0.3s;
@@ -92,55 +92,9 @@ body {
 .nav .hamburger {
   display: none;
   cursor: pointer;
-  /* position: absolute; */
-  /* right: 10px; */
-}
-
-/* Responsive Design */
-@media (min-width: 768px) {
-  .nav .mobile-lang button {
-    display: none;
-  }
-
-  .nav .desktop-lang {
-    display: block;
-  }
 
 }
-@media (max-width: 768px) {
-  .nav .hamburger {
-    display: block;
-  }
- 
 
-
-  .nav ul {
-    flex-direction: column;
-    position: fixed;
-    right: 0;
-    top: 70px;
-    background: #ffffff;
-    width: 100%;
-    display: none;
-  }
-
-  .nav ul li {
-    text-align: center;
-    padding: 10px 0;
-  }
-
-  .nav ul.show {
-    display: flex;
-  }
-
-  .nav .mobile-lang button {
-    display: block;
-  }
-
-  .nav .desktop-lang {
-    display: none;
-  }
-}
 
 /* Hamburger Icon toggle */
 .hamburger i {
@@ -154,10 +108,6 @@ body {
 header .hero {
   background: linear-gradient(#266bdb, rgba(180, 178, 178, 0.5)), url("../images/silder2.jpg") no-repeat center center/cover;
   height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  position: relative;
   color: #fff;;
 }
 
@@ -165,10 +115,8 @@ header .hero .overlay {
   background-color: #e1f7fa7b;
   text-align: center;
   height: 100%;
-  width: 100%;
   display: flex;
   justify-content: center;
-  align-items: center;
   flex-direction: column; 
 }
 
@@ -184,10 +132,10 @@ header .overlay h1 .underline::after {
   position: absolute;
   left: 0;
   bottom: -10px;
-  width: 0%; /* Start with no underline visible */
+  width: 0%; 
   height: 4px; /* Thicker underline */
   background-color: #3188eb; /* Orange color for underline */
-  transition: width 0.5s ease; /* Smooth transition for the underline */
+  transition: width 0.5s ease-in-out; /* Smooth transition for the underline */
 }
 
 header .overlay h1 .underline:hover::after {
@@ -196,15 +144,11 @@ header .overlay h1 .underline:hover::after {
 
 header .hero .overlay h1 {
   font-size: 3rem;
-  margin: 0;
-  transition: color 0.3s ease; /* Smooth color transition */
+
 }
 
 header .hero .overlay p {
-  font-size: 1.5em;
-  /* border-bottom: #154161 solid 1px ; */
-  padding: 5px;
-  
+  font-size: 1.5em;  
 }
 
 #typed-text, #typed-text_ar{
@@ -218,10 +162,8 @@ header .hero .cta-buttons {
 }
 
 header .hero .cta-buttons .btn {
-  background-color: #3188eb; /* Dark blue for buttons */
-  color: #fff; /* White text for better readability */
-  padding: 10px 20px;
-  text-decoration: none;
+  background-color: #3188eb; 
+  color: #fff; 
   border-radius: 5px;
   margin: 5px;
   transition: background-color 0.3s, transform 0.3s; /* Added transform to transition properties */
@@ -235,173 +177,152 @@ header .hero .cta-buttons .btn:hover {
 
 /* ==========================OUR MISSION ===================== */
 .about {
-    padding: 40px 20px;
-    background-color: #f8f8f8;
-    text-align: center;
-  }
-  
-  .about-container {
-    /* height: 85vh; */
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: center;
-    /* max-width: 1200px; */
-    margin: 0 auto;
-  }
-  
+  display: flex;
+  background-color: #f8f8f8;
+  height: 90vh;
+  text-align: center;
+}
+
+.about-container {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  gap: 40px;
+  justify-content: center;
+  margin: 0 auto;
+}
 
 
+/* Text styles */
+.about-text {
+  flex: 1;
+  min-width: 300px;
+  max-width: 1000px; 
+  text-align: left;
+  animation: fadeInLeft 1s ease-out;
+}
 
+.about-text h3 {
+  font-size: 2.5em;
+  color: #2081ef; /* Adds a pop of color */
+  margin-bottom: 20px;
+}
 
+.about-text p {
+  font-size: 1.2em;
+  color: #333;
+  line-height: 1.6;
+  margin-bottom: 20px;
+}
 
+.about-text button {
+  background-color: #3188eb; /* Changed to orange for better visibility */
+  color: white;
+  padding: 10px 20px;
+  border: none;
+  cursor: pointer;
+  font-size: 1em;
+  transition: background-color 0.3s;
+}
 
+.about-text button:hover {
+  background-color: #2081ef; /* Darker shade of orange on hover */
+}
 
+.about-image {
 
+  flex: 1;
+  min-width: 300px;
+  max-width: 1000px;
+  animation: dropIn 1s ease-out;
+}
 
+.about-image img {
+  width: 100%;
+  border-radius: 20px;
+}
 
+.about-image {
+  position: relative;
+   width: 100%;
+  height: 300px;  
+   /* Adjust based on your design requirements */
+  overflow: hidden;
+}
 
-  /* Text styles */
-  .about-text {
-    flex: 1;
-    min-width: 400px;
-    max-width: 800px;
-    padding: 20px;
-    text-align: left;
-    animation: fadeInLeft 1s ease-out;
-  }
-  
-  /* .about-text h2 {
-    font-size: 3em;
-    font-weight: bold;
-    /* margin-bottom: 0px; */
-    /* color: #154161; */
-     /* Darker shade for better readability */
-  /* }  */
-  
-  .about-text h3 {
-    font-size: 2.5em;
-    color: #2081ef; /* Adds a pop of color */
-    margin-bottom: 20px;
-  }
-  
-  .about-text p {
-    font-size: 1.2em;
-    color: #333;
-    line-height: 1.6;
-    margin-bottom: 20px;
-  }
-  
-  .about-text button {
-    background-color: #3188eb; /* Changed to orange for better visibility */
-    color: white;
-    padding: 10px 20px;
-    border: none;
-    cursor: pointer;
-    font-size: 1em;
-    transition: background-color 0.3s;
-  }
-  
-  .about-text button:hover {
-    background-color: #2081ef; /* Darker shade of orange on hover */
-  }
-  
- 
-  .about-image {
- 
-    flex: 1;
-    min-width: 200px;
-    max-width: 600px;
-    padding: 20px;
-    animation: dropIn 1s ease-out;
-  }
-  
-  .about-image img {
-    width: 100%;
-    border-radius: 20px;
-  }
-  
-  .about-image {
-    position: relative;
-     width: 100%;
-    height: 300px;  
-     /* Adjust based on your design requirements */
-    overflow: hidden;
-  }
-  
-  .about-image img {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    transition: opacity 1s ease-in-out;
+.about-image img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  transition: opacity 1s ease-in-out;
+  opacity: 0;
+}
+
+.about-image img.active {
+  opacity: 1;
+}
+
+/* Animations about Image */
+@keyframes dropIn {
+  from {
     opacity: 0;
+    transform: translateY(-50px);
   }
-  
-  .about-image img.active {
+  to {
     opacity: 1;
+    transform: translateY(0);
   }
-  
+}
 
-
-  
-  /* Animations */
-  @keyframes dropIn {
-    from {
-      opacity: 0;
-      transform: translateY(-50px);
-    }
-    to {
-      opacity: 1;
-      transform: translateY(0);
-    }
+@keyframes fadeInLeft {
+  from {
+    opacity: 0;
+    transform: translateX(-50px);
   }
-  
-  @keyframes fadeInLeft {
-    from {
-      opacity: 0;
-      transform: translateX(-50px);
-    }
-    to {
-      opacity: 1;
-      transform: translateX(0);
-    }
+  to {
+    opacity: 1;
+    transform: translateX(0);
   }
+}
 
 
 
 /* =========================Facts=========== */
-.wrapper {
-  /* height: 85vh; */
-position: relative;
+
+.facts_section  {
   width: 80vw;
+  display: grid;
+
+}
+.wrapper {
+position: relative;
   transform: translate(-50%, -50%);
   top: 50%;
   left: 50%;
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
   align-items: center;
-  gap: 10px;
+  gap: 20px;
+ 
 }
 .facts {
-  width: 28vmin;
-  height: 28vmin;
+  border: 1px solid black;
+  width: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: space-evenly;
-  padding: 1em 0;
-  position: relative;
-  font-size: 16px;
+  align-items: center;
+  justify-content: center;
+  padding: 1em ;
   border-radius: 0.5em;
-  background-color: transparent;
+  background-color: #2c7bfe;
 
 }
 
 span.num {
   color: #ffffff;
-
   display: grid;
   place-items: center;
   font-weight: 600;
@@ -409,55 +330,32 @@ span.num {
 }
 span.text {
  color: #154161;
-
   font-size: 1em;
   text-align: center;
-  pad: 0.7em 0;
   font-weight: 600;
   line-height: 0;
 }
-@media screen and (max-width: 1024px) {
-  .wrapper {
-    width: 85vw;
-  }
-  .facts {
-    height: 26vmin;
-    width: 26vmin;
-    font-size: 12px;
-  }
-}
+
 @media screen and (max-width: 768px) {
   .wrapper {
-    width: 90vw;
     flex-wrap: wrap;
-    gap: 30px;
   }
   .facts {
-    width: calc(50% - 40px);
-    height: 30vmin;
-    font-size: 14px;
+    width: calc(40%);
+  
   }
 }
-@media screen and (max-width: 480px) {
-  .wrapper {
-    gap: 15px;
+@media screen and (max-width: 500px) {
+  .facts {
+    width: calc(100%);
+ 
   }
-  .facts{
-    /* width: 10%; */
-    height: 25vmin;
-    font-size: 8px;
-  }
+
+ 
 }
 
 
-.facts_section  {
 
-  /* height: 85vh; */
-  width: 80vw;
-  display: grid;
-  background-color: #2c7bfe;
-
-}
 
 
 
@@ -533,23 +431,29 @@ padding: 40px 20px;
 text-align: center;
 
   } 
+
+  .services_section{
+    display: flex;
+    justify-content: space-evenly;
+ 
+    flex-direction: column;
+gap: 4vh;
+    /* height: 90vh; */
+  }
   @media screen and (min-width: 768px) {
-    .services_section {
-      padding: 0 2em;
-    }
+  
     .column {
       flex: 0 50%;
       max-width: 50%;
     }
   }
   @media screen and (min-width: 992px) {
-    /* section {
-      padding: 1em 3em;
-    } */
+
     .column {
       flex: 0 0 33.33%;
       max-width: 33.33%;
     }
+   
   }
   
   /* ===========================Our Clients ==================  */
@@ -567,7 +471,7 @@ text-align: center;
 
 .logos {
   height: 
-  30vh;
+  50vh;
   overflow: hidden;
 display: flex;
 justify-content: center;
@@ -581,7 +485,7 @@ align-items: center;
 .logos:after {
   position: absolute;
   top: 0;
-  width: 250px;
+  width: 20vw;
   height: 100%;
   content: "";
   z-index: 2;
@@ -614,144 +518,18 @@ align-items: center;
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-/* ===========Contact========= */
-.container_contact {
-  background-color: #dce9f7;
-  /* max-width: 1200px; */
-  /* margin: 0 auto; */
-  padding: 40px 20px;
-  box-sizing: border-box;
-}
-
-h2 {
-  text-align: center;
-  /* margin-bottom: 20px; */
-}
-
-.contact-content {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 20px;
-}
-
-.contact-details, .contact-form {
-  flex: 1;
-  min-width: 300px; /* Ensures responsiveness on smaller devices */
-}
-
-.contact-details{
-  display: flex;
-  flex-direction: column;
-  /* align-items: center; */
-  justify-content: center;
-}
- .contact_caption, p{
-  /* text-align: center; */
-  font-size: 1em;
-
-}
-.contact_icon{
-  color: #007bff;
-}
-
-.contact-form {
-  background: #f9f9f9;
-  padding: 20px;
-  border-radius: 8px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-}
-
-.contact-form .form-group {
-  margin-bottom: 15px;
-}
-
-.contact-form label {
-  display: block;
-  color: #007bff;
-  margin-bottom: 5px;
-}
-
-.contact-form input, .contact-form textarea {
-  width: 100%;
-  padding: 10px;
-  border: 1px solid #007bff
-  ;
-  border-radius: 4px;
-}
-
-.contact-form button {
-  background: #007bff;
-  color: #fff;
-  padding: 10px 20px;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-}
-
-
-.social-media {
-  text-align: center;
-  padding: 20px 0  ;
-}
-.social-media a {
-  margin-right: 10px;
-  font-size: 24px;
-  text-decoration: none;
-}
-
-
-.btn {
-  display: inline-block;
-  padding: 10px 20px;
-  background: #007bff;
-  color: #fff;
-  text-decoration: none;
-  border-radius: 4px;
-  transition: background 0.3s ease;
-}
-
-.contact-details h3{
-  text-align: center;
-  color: #007bff;
-}
-
-.btn:hover {
-  background: #0056b3;
-}
-
-
-
-/* Testimonials  */
-
 /* Testimonials */
 .testi_section {
-  /* height: 92vh; */
-  padding: 40px 20px;
-  background-color: #ffffff;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  height: 90vh;
+ 
   text-align: center;
 }
 
 .testimonials-container {
-  position: relative;
   overflow: hidden;
-
-
-
-
-  
   width: 80%;
   margin: auto;
 }
@@ -818,6 +596,117 @@ h2 {
 .testimonial-controls span:hover {
   color: #3188eb;
 }
+
+
+
+/* ===========Contact========= */
+.container_contact {
+  background-color: #d4dfeb;
+  height: 90vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  gap: 5vh;
+
+}
+
+h2 {
+  text-align: center;
+
+}
+
+.contact-content {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+}
+
+.contact-details, .contact-form {
+  flex: 1;
+  min-width: 300px; /* Ensures responsiveness on smaller devices */
+}
+
+.contact-details{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+ .contact_caption, p{
+  font-size: 1em;
+
+}
+.contact_icon{
+  color: #007bff;
+}
+
+.contact-form {
+  background: #f9f9f9;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.contact-form .form-group {
+  margin-bottom: 15px;
+}
+
+.contact-form label {
+  display: block;
+  color: #007bff;
+  margin-bottom: 5px;
+}
+
+.contact-form input, .contact-form textarea {
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #007bff
+  ;
+  border-radius: 4px;
+}
+
+.contact-form button {
+  background: #007bff;
+  color: #fff;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+
+.social-media {
+  text-align: center;
+  padding: 20px 0  ;
+}
+.social-media a {
+  margin-right: 10px;
+  font-size: 24px;
+  text-decoration: none;
+}
+
+
+.btn {
+  display: inline-block;
+  padding: 10px 20px;
+  background: #007bff;
+  color: #fff;
+  text-decoration: none;
+  border-radius: 4px;
+  /* transition: background 0.3s ease; */
+}
+
+.contact-details h3{
+  text-align: center;
+  color: #007bff;
+}
+
+.btn:hover {
+  background: #0056b3;
+}
+
+
+
 footer p{
   width: 100%;
   font-size: 15px;
@@ -830,12 +719,6 @@ footer p{
   ;
 }
 
-.contact_data{
-  text-align: center;
-  
-
-
-}
 
 
 /* =================== */
@@ -884,4 +767,81 @@ body[lang="ar"] .contact-content{
 body[lang="ar"] .overlay h1{
   direction: rtl;
   gap: 5vh;
+}
+/* ===================================== */
+
+
+
+
+/* Responsive Design */
+@media (min-width: 768px) {
+  .nav .mobile-lang button {
+    display: none;
+  }
+
+  .nav .desktop-lang {
+    display: block;
+  }
+  .about-container{
+    padding: 90px 0;
+  }
+
+}
+@media (max-width: 768px) {
+  .nav .hamburger {
+    display: block;
+  }
+
+
+  .testi_section {
+   height: 100%;
+      }
+      .container_contact {
+        background-color: #d4dfeb;
+        height: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        gap: 5vh;
+      
+      }
+
+      .services_section{
+     
+        height: 100%;
+      }
+      .about {
+      
+        height: 100%;
+      
+      }
+
+  .nav ul {
+    flex-direction: column;
+    position: fixed;
+    right: 0;
+    top: 70px;
+    background: #ffffff;
+    width: 100%;
+    display: none;
+  }
+
+  .nav ul li {
+
+    padding: 10px 0;
+  }
+
+  .nav ul.show {
+
+    display: flex;
+  }
+
+  .nav .mobile-lang button {
+    display: block;
+  }
+
+  .nav .desktop-lang {
+    display: none;
+  }
 }
