--- a/style/style.css
+++ b/style/style.css
@@ -1,5 +1,19 @@
 
 
+
+:root {
+  --secondary-color: #3188eb;
+  --primary-color: #2081ef;
+ 
+  --background-color1: #f9f7f7;
+  --text-color: #333;
+  --white-color: #ffffff;
+  --black-color: #000000;
+  --gray-color: #575a7b;
+  --light-gray-color: #f8f8f8;
+  --heading-color: #154161; 
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -15,11 +29,10 @@ html{
 }
 body {
   font-family: 'Poppins', sans-serif; /* Sets the default font family */
-    color: #333; /* Sets a standard text color */
+    color: var(--text-color); /* Sets a standard text color */
     line-height: 1.6; /* Sets a comfortable line height */
     overflow-x: hidden; /* Prevents horizontal scrolling */
-    color: #333;
-    background-color: #f9f7f7;
+    background-color: var(--background-color1);
 } 
 section{
 
@@ -30,21 +43,21 @@ section{
 section h2 {
   text-align: center;
   font-weight: bold;
-  color: #154161; 
+  color: var(--heading-color); 
 }
 
 /* ================================NAVIGATION ======================== */
 .nav {
   padding: 20px;
   height: 70px;
-  background: #ffffff;
+  background: var(--white-color);
   position: fixed;
   width: 100%;
   z-index: 1000;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  box-shadow: 0 2px 3px #3188ebfe;
+  box-shadow: 0 2px 3px var(--primary-color);
 }
 
 .nav .logo  img{
@@ -62,31 +75,32 @@ section h2 {
 
 .nav ul li {
   margin: 0 15px;
+
 }
 
 .nav .mobile-lang button,.nav .desktop-lang button{
 
-  background: #4B91E3;
+  background: var(--primary-color);
   border: none;
   padding: 10px 20px;
-  color: #fff;
+  color: var(--white-color);
   cursor: pointer;
   border-radius: 5px;
 }
 
 .nav  button:hover{
-  background: #41b18d;
+  background: var(--secondary-color);
 }
 
 .nav ul li a {
-  color: #3D3E3B; 
+  color: var(--text-color); 
   text-decoration: none;
-  font-size: 1.1rem;
+  font-size: 1rem;
   transition: color 0.3s;
 }
 
 .nav ul li a:hover {
-  color: #4B91E3;
+  color: var(--primary-color);
 }
 
 .nav .hamburger {
@@ -99,16 +113,16 @@ section h2 {
 /* Hamburger Icon toggle */
 .hamburger i {
   font-size: 2rem;
-  color: #4B91E3;
+  color: var(--primary-color);
 }
 
 
  
 /* ================================HEADER =================== */
 header .hero {
-  background: linear-gradient(#266bdb, rgba(180, 178, 178, 0.5)), url("../images/silder2.jpg") no-repeat center center/cover;
+  background: linear-gradient(var(--primary-color), rgba(180, 178, 178, 0.5)), url("../images/silder2.jpg") no-repeat center center/cover;
   height: 100vh;
-  color: #fff;;
+  color: var(--white-color);
 }
 
 header .hero .overlay {
@@ -124,7 +138,7 @@ header .overlay h1 .underline {
   position: relative;
   display: inline-block;
   font-weight: bold;
-  color: #154161; /* Brighten up the text color for contrast */
+  color: var(--heading-color); /* Brighten up the text color for contrast */
 }
 
 header .overlay h1 .underline::after {
@@ -134,7 +148,7 @@ header .overlay h1 .underline::after {
   bottom: -10px;
   width: 0%; 
   height: 4px; /* Thicker underline */
-  background-color: #3188eb; /* Orange color for underline */
+  background-color: var(--primary-color); /* Orange color for underline */
   transition: width 0.5s ease-in-out; /* Smooth transition for the underline */
 }
 
@@ -153,7 +167,7 @@ header .hero .overlay p {
 
 #typed-text, #typed-text_ar{
   font-weight: bold;
-  color:#2c7bfe ;
+  color:var(--primary-color) ;
 
 }
 
@@ -162,7 +176,7 @@ header .hero .cta-buttons {
 }
 
 header .hero .cta-buttons .btn {
-  background-color: #3188eb; 
+  background-color: var(--primary-color); 
   color: #fff; 
   border-radius: 5px;
   margin: 5px;
@@ -170,7 +184,7 @@ header .hero .cta-buttons .btn {
 }
 
 header .hero .cta-buttons .btn:hover {
-  background-color: #2081ef; /* Orange color on hover */
+  background-color: var(--secondary-color); /* Orange color on hover */
   transform: translateY(-2px); /* Slight lift effect on hover */
 }
 
@@ -178,7 +192,6 @@ header .hero .cta-buttons .btn:hover {
 /* ==========================OUR MISSION ===================== */
 .about {
   display: flex;
-  background-color: #f8f8f8;
   height: 90vh;
   text-align: center;
 }
@@ -204,20 +217,19 @@ header .hero .cta-buttons .btn:hover {
 
 .about-text h3 {
   font-size: 2.5em;
-  color: #2081ef; /* Adds a pop of color */
+  color: var(--primary-color); /* Adds a pop of color */
   margin-bottom: 20px;
 }
 
 .about-text p {
   font-size: 1.2em;
-  color: #333;
   line-height: 1.6;
   margin-bottom: 20px;
 }
 
 .about-text button {
-  background-color: #3188eb; /* Changed to orange for better visibility */
-  color: white;
+  background-color: var(--primary-color); /* Changed to orange for better visibility */
+  color: var(--white-color);
   padding: 10px 20px;
   border: none;
   cursor: pointer;
@@ -226,7 +238,7 @@ header .hero .cta-buttons .btn:hover {
 }
 
 .about-text button:hover {
-  background-color: #2081ef; /* Darker shade of orange on hover */
+  background-color: var(--secondary-color); /* Darker shade of orange on hover */
 }
 
 .about-image {
@@ -309,7 +321,6 @@ position: relative;
  
 }
 .facts {
-  border: 1px solid black;
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -317,20 +328,20 @@ position: relative;
   justify-content: center;
   padding: 1em ;
   border-radius: 0.5em;
-  background-color: #2c7bfe;
+  background-color: var(--primary-color);
 
 }
 
 span.num {
-  color: #ffffff;
+  color: var(--white-color);
   display: grid;
   place-items: center;
   font-weight: 600;
   font-size: 3em;
 }
 span.text {
- color: #154161;
-  font-size: 1em;
+ color: var(--heading-color);
+  font-size: 1.2em;
   text-align: center;
   font-weight: 600;
   line-height: 0;
@@ -379,7 +390,7 @@ span.text {
     width: 100%;
     height: 100%;
     padding: 1.5em 1em;
-    background: linear-gradient(#ffffff 50%, #2c7bfe 50%);
+    background: linear-gradient(var(--white-color) 50%, var(--primary-color) 50%);
     background-size: 100% 200%;
     background-position: 0 2.5%;
     border-radius: 5px;
@@ -390,17 +401,17 @@ span.text {
   h3 {
     font-size: 17px;
     font-weight: 600;
-    color: #1f194c;
+    color: var(--heading-color);
     margin: 1em 0;
   }
   .card_data {
-    color: #575a7b;
+
     font-size: 13px;
     line-height: 1.5;
     letter-spacing: 0.03em;
   }
   .icon-wrapper {
-    background-color: #2c7bfe;
+    background-color: var(--primary-color);
     position: relative;
     margin: auto;
     font-size: 30px;
@@ -416,14 +427,14 @@ span.text {
     background-position: 0 100%;
   }
   .card:hover .icon-wrapper {
-    background-color: #ffffff;
-    color: #2c7bfe;
+    background-color: var(--white-color);
+    color: var(--secondary-color);
   }
   .card:hover h3 {
-    color: #ffffff;
+    color: var(--white-color);
   }
   .card:hover p {
-    color: #f0f0f0;
+    color: var(--white-color);
   }
 
   .sevices_section{
@@ -438,7 +449,7 @@ text-align: center;
  
     flex-direction: column;
 gap: 4vh;
-    /* height: 90vh; */
+    height: 90vh;
   }
   @media screen and (min-width: 768px) {
   
@@ -469,7 +480,7 @@ gap: 4vh;
   }
 }
 
-.logos {
+.logos,.products {
   height: 
   50vh;
   overflow: hidden;
@@ -481,8 +492,13 @@ align-items: center;
   position: relative;
 }
 
+.products {
+  width: 90vw;
+}
+
 .logos:before,
-.logos:after {
+.logos:after , .products:before,
+.products:after{
   position: absolute;
   top: 0;
   width: 20vw;
@@ -491,23 +507,36 @@ align-items: center;
   z-index: 2;
 }
 
+
+
 .logos:before {
   left: 0;
-  background: linear-gradient(to left, rgba(255, 255, 255, 0), #3d87ff);
+  background: linear-gradient(to left, rgba(255, 255, 255, 0), var(--primary-color));
 }
 
-.logos:after {
+.logos:before {
+  left: 0;
+  background: linear-gradient(to left, rgba(255, 255, 255, 0),var(--primary-color));
+}
+
+.logos:after{
   right: 0;
-  background: linear-gradient(to right, rgba(255, 255, 255, 0), #3d87ff);
+  background: linear-gradient(to right, rgba(255, 255, 255, 0),var(--primary-color));
 }
 
-.logos:hover .logos-slide {
+
+
+
+
+
+.logos:hover .logos-slide,.products:hover .products-slide {
   animation-play-state: paused;
 }
 
-.logos-slide {
+.logos-slide ,.products-slide {
   display: inline-block;
   animation: 35s slide infinite linear;
+
 }
 
 .logos-slide img {
@@ -515,6 +544,14 @@ align-items: center;
   width: 10em;
   margin: 0 40px;
 }
+
+
+.products-slide {
+  display: flex;
+
+}
+
+
 
 
 
@@ -561,20 +598,20 @@ align-items: center;
   height: 100px; /* Adjust the size as needed */
   border-radius: 50%;
   margin-bottom: 20px;
-  border: 3px dotted  #4b91e3;
+  border: 3px dotted  var(--primary-color);
 }
 
 .testimonial p {
   font-size: 1.2em;
   line-height: 1.6;
-  color: #333;
+
 }
 .quote{
-  color: #4b91e3;
+  color: var(--primary-color);
 }
 .testimonial h3 {
   font-size: 1.1em;
-  color: #4b91e3;
+  color: var(--primary-color);
   margin-top: 10px;
 }
 
@@ -589,12 +626,12 @@ align-items: center;
   padding: 20px;
   font-size: 2.5em;
   user-select: none;
-  color: #4b91e3;
+  color: var(--primary-color);
   transition: color 0.3s;
 }
 
 .testimonial-controls span:hover {
-  color: #3188eb;
+  color: var(--secondary-color);
 }
 
 
@@ -637,7 +674,7 @@ h2 {
 
 }
 .contact_icon{
-  color: #007bff;
+  color: var(--primary-color);
 }
 
 .contact-form {
@@ -653,21 +690,21 @@ h2 {
 
 .contact-form label {
   display: block;
-  color: #007bff;
+  color: var(--primary-color);
   margin-bottom: 5px;
 }
 
 .contact-form input, .contact-form textarea {
   width: 100%;
   padding: 10px;
-  border: 1px solid #007bff
+  border: 1px solid --primary-color
   ;
   border-radius: 4px;
 }
 
 .contact-form button {
-  background: #007bff;
-  color: #fff;
+  background: var(--primary-color);
+  color: var(--white-color);
   padding: 10px 20px;
   border: none;
   border-radius: 4px;
@@ -689,8 +726,8 @@ h2 {
 .btn {
   display: inline-block;
   padding: 10px 20px;
-  background: #007bff;
-  color: #fff;
+  background: var(--primary-color);
+  color: var(--white-color);
   text-decoration: none;
   border-radius: 4px;
   /* transition: background 0.3s ease; */
@@ -698,11 +735,11 @@ h2 {
 
 .contact-details h3{
   text-align: center;
-  color: #007bff;
+  color: var(--primary-color);
 }
 
 .btn:hover {
-  background: #0056b3;
+  background: var(--secondary-color)  ;
 }
 
 
@@ -822,7 +859,7 @@ body[lang="ar"] .overlay h1{
     position: fixed;
     right: 0;
     top: 70px;
-    background: #ffffff;
+    background: var(--white-color);
     width: 100%;
     display: none;
   }
