--- a/style/style.css
+++ b/style/style.css
@@ -1,5 +1,4 @@
-
-
+/* =====================Globle Settings ============ */
 
 :root {
   --secondary-color: #3188eb;
@@ -35,9 +34,7 @@ body {
     background-color: var(--background-color1);
 } 
 section{
-
   padding: 20px 20px;
-
 }
 
 section h2 {
@@ -47,8 +44,9 @@ section h2 {
 }
 
 /* ================================NAVIGATION ======================== */
-.nav {
-  padding: 20px;
+.nav { 
+
+  padding: 0 10px;
   height: 70px;
   background: var(--white-color);
   position: fixed;
@@ -58,27 +56,60 @@ section h2 {
   justify-content: space-between;
   align-items: center;
   box-shadow: 0 2px 3px var(--primary-color);
-}
+} 
 
-.nav .logo  img{
+.nav .logo img {
   width: 120px;
 }
 
 .nav ul {
-  list-style: none;
-  display: flex;
-  align-items: center;
-  position: absolute;
-  left: 50%;
-  transform: translateX(-50%);
+  position: relative;
 }
 
 .nav ul li {
-  margin: 0 15px;
+    list-style: none;
+  position: relative; 
+  float: left;
+}
+.nav ul li a{
+  color: var(--text-color);
+  padding:  10px 20px;
+  text-decoration: none;
+  display: flex;
+  justify-content: space-between;
 
 }
+.nav ul li a:hover{
+  color: var(--primary-color);
+}
+.fa-solid{
+  display: flex;
+  align-items: center;
+}
+.nav ul li ul{
+  position: absolute;
+  left: 0;
+  width: 200px;
+  background-color: var(--white-color);
+  border-radius: 5px;
+  display: none;
+}
+.nav ul li:hover > ul{
+  display: block;
+}
 
-.nav .mobile-lang button,.nav .desktop-lang button{
+.nav ul li ul li {
+  position: relative;
+  width: 100%;
+}
+
+.nav ul li ul li ul {
+top: 0;
+left: 200px;
+}
+
+.nav .mobile-lang button,
+.nav .desktop-lang button {
 
   background: var(--primary-color);
   border: none;
@@ -88,33 +119,26 @@ section h2 {
   border-radius: 5px;
 }
 
-.nav  button:hover{
+.nav button:hover {
   background: var(--secondary-color);
 }
 
-.nav ul li a {
-  color: var(--text-color); 
-  text-decoration: none;
-  font-size: 1rem;
-  transition: color 0.3s;
+.mobile-lang button{
+  display: none;
 }
 
-.nav ul li a:hover {
-  color: var(--primary-color);
-}
 
 .nav .hamburger {
+
   display: none;
-  cursor: pointer;
-
 }
 
+/* =======================NAV End ================================================= */
 
-/* Hamburger Icon toggle */
-.hamburger i {
-  font-size: 2rem;
-  color: var(--primary-color);
-}
+
+
+
+
 
 
  
@@ -188,8 +212,9 @@ header .hero .cta-buttons .btn:hover {
   transform: translateY(-2px); /* Slight lift effect on hover */
 }
 
+/* =================================header End ================================================================= */
 
-/* ==========================OUR MISSION ===================== */
+/* ==========================About Section  ===================== */
 .about {
   display: flex;
   height: 90vh;
@@ -277,6 +302,9 @@ header .hero .cta-buttons .btn:hover {
   opacity: 1;
 }
 
+
+
+
 /* Animations about Image */
 @keyframes dropIn {
   from {
@@ -300,7 +328,7 @@ header .hero .cta-buttons .btn:hover {
   }
 }
 
-
+/* =================About section End ================ */
 
 /* =========================Facts=========== */
 
@@ -347,7 +375,7 @@ span.text {
   line-height: 0;
 }
 
-@media screen and (max-width: 768px) {
+ @media screen and (max-width: 768px) {
   .wrapper {
     flex-wrap: wrap;
   }
@@ -356,19 +384,18 @@ span.text {
   
   }
 }
+
 @media screen and (max-width: 500px) {
   .facts {
     width: calc(100%);
  
   }
-
- 
 }
 
 
 
 
-
+/* =========================FActs End ================================================================= */
 
   /* ===========================Our Services==================  */
   .sevices_section, .facts_section  {
@@ -661,7 +688,7 @@ h2 {
 
 .contact-details, .contact-form {
   flex: 1;
-  min-width: 300px; /* Ensures responsiveness on smaller devices */
+  min-width: 300px; 
 }
 
 .contact-details{
@@ -730,7 +757,6 @@ h2 {
   color: var(--white-color);
   text-decoration: none;
   border-radius: 4px;
-  /* transition: background 0.3s ease; */
 }
 
 .contact-details h3{
@@ -741,8 +767,6 @@ h2 {
 .btn:hover {
   background: var(--secondary-color)  ;
 }
-
-
 
 footer p{
   width: 100%;
@@ -758,82 +782,170 @@ footer p{
 
 
 
-/* =================== */
-
-/* ============================================
- */
 
 
 
 
 
 /* Adjustments for other sections as needed */
-body[lang="ar"] .about-text, body[lang="ar"] .facts_section {
-  text-align: right;
-}
-body[lang="ar"] .facts_section{
-  direction: ltr;
-}
 
 
-/* done  */
-
-body[lang="ar"] .about-text h3 {
-  text-align: left;
-  
-}
 
 
-body[lang="ar"] .services_section, body[lang="ar"] .facts_section {
-  text-align: right;
-}
-
-body[lang="ar"] , .testi_section{
-  direction: ltr;
-}
 
 
-body[lang="ar"] p{
-  direction: rtl;
-}
 
-body[lang="ar"] .contact-content{
-  gap: 5vh;
-}
 
-body[lang="ar"] .overlay h1{
-  direction: rtl;
-  gap: 5vh;
-}
+
+
+
+
+
+
+
+
 /* ===================================== */
 
 
 
 
-/* Responsive Design */
-@media (min-width: 768px) {
-  .nav .mobile-lang button {
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* ==========================Media Quiries============================ */
+
+@media  (max-width: 900px) {
+  .nav ul{
     display: none;
+    position: absolute;
+    width: 100%;
+    top: 66px;
+    background-color: var(--white-color);
+left: 0;
   }
+  .nav ul li{
+    border-top: 1px solid var(--primary-color);
+    width: 100%;
+  }
+  .nav ul li ul  {
+    position: relative;
+    width: 100%;
+    left: 0;
+    top: 0;
+  }
+  .nav ul li ul li ul {
+    top: 0 ;
+    left: 0;
 
-  .nav .desktop-lang {
+  }
+  .nav ul li:hover > ul li{
+    background-color: #eff8ff;
+
+  }
+  .nav .mobile-lang button {
     display: block;
+    
   }
-  .about-container{
-    padding: 90px 0;
+  .desktop-lang button {
+display: none;
   }
-
-}
-@media (max-width: 768px) {
   .nav .hamburger {
+  
+    position: relative;
+    width: 30px;
+    height: 20px;
+  
+
+
     display: block;
+    cursor: pointer;
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .hamburger::before{
+    content: "";
+    position: absolute;
+    background-color: var(--primary-color);
+    border-radius: 100px;
+
+
+    width: 100%;
+    height: 3px;
+    transform: translateY(-12px);
+    box-shadow: 0 12px var(--primary-color);
+
+
+  }
+  .hamburger::after{
+    content: "";
+    position: absolute;
+    background-color: var(--primary-color);
+    border-radius: 100px;
+
+
+    width: 100%;
+    height: 3px;
+    transform: translateY(12px);
+
+
+  }
+  .nav.active .hamburger::before{
+    transform: rotate(45deg);
+    box-shadow: 0 0 var(--primary-color);
+  }
+  .nav.active .hamburger::after{
+    transform: rotate(-45deg);
+    box-shadow: 0 0 var(--primary-color);
+  }
+  .nav.active #nav-menu{
+    display: inline;
+  }
+  .mobile-lang{
+
+    display: flex;
+    justify-content: center;
+   
+
+  }
+  .mobile-lang button{
+    margin : 10px 0 ;  }
+
+
+  
+  .nav .desktop-lang {
+    display: none;
   }
 
 
   .testi_section {
-   height: 100%;
-      }
-      .container_contact {
+  height: 100%;
+      } 
+       .container_contact {
         background-color: #d4dfeb;
         height: 100%;
         display: flex;
@@ -842,7 +954,7 @@ body[lang="ar"] .overlay h1{
         flex-direction: column;
         gap: 5vh;
       
-      }
+      } 
 
       .services_section{
      
@@ -854,31 +966,6 @@ body[lang="ar"] .overlay h1{
       
       }
 
-  .nav ul {
-    flex-direction: column;
-    position: fixed;
-    right: 0;
-    top: 70px;
-    background: var(--white-color);
-    width: 100%;
-    display: none;
-  }
-
-  .nav ul li {
-
-    padding: 10px 0;
-  }
-
-  .nav ul.show {
-
-    display: flex;
-  }
-
-  .nav .mobile-lang button {
-    display: block;
-  }
-
-  .nav .desktop-lang {
-    display: none;
-  }
 }
+
+
